--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,25 @@
-//$primary: red;
-$dark: rgb(177, 61, 7);
+//$primary: blue;
+//$dark: rgb(177, 61, 7);
+
+.section {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+}
+
+.section:nth-child(odd) {
+    background-color: #5014c9
+}
+
+.section:nth-child(even) {
+    background-color: #9576d3;
+}
+
+
+
+
 
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
