--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #fff;
+  color: #ccd0df;
 }
 
 .section:nth-child(odd) {
-  background-color: #5014c9;
+  background-color: #bebbc4;
 }
 
 .section:nth-child(even) {
