--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #ccd0df;
+  color: #304078;
 }
 
 .section:nth-child(odd) {
