--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,16 @@
   color: #304078;
 }
 
+#home {
+  color: yellow;
+}
+
+.section h1, .section .h1 {
+  font-size: 300px;
+}
+
 .section:nth-child(odd) {
-  background-color: #bebbc4;
+  background-color: #e7147a;
 }
 
 .section:nth-child(even) {
