--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,11 +9,22 @@
     align-items: center;
     justify-content: center;
     color: #304078;
+
 }
 
+#home {
+
+    color: yellow;
+}
+
+.section h1 {
+    font-size: 300px;
+}
 
 .section:nth-child(odd) {
-    background-color: #bebbc4
+    background-color: #e7147a;
+
+
 }
 
 .section:nth-child(even) {
